--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,20 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install AWS CLI
-      run: sudo apt-get install -y awscli
+      run: sudo apt-get install -y awscli      
+      
+    - name: Checkout source code
+      uses: actions/checkout@v2
+
+    - name: Setup Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+          ruby-version: 2.7
+
+    - name: Install dependencies
+      run: |
+        gem install bundler
+        bundle install
 
     - name: Sync files to S3
       run: |
