--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to S3
 on:
   push:
     branches:
-      - main  # Trigger deployment on push to main branch
+      - jekyll  # Trigger deployment on push to the jekyll branch
 
 jobs:
   deploy:
@@ -13,12 +13,26 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v2
 
+    - name: Install Ruby and Bundler
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y ruby-full build-essential zlib1g-dev
+        gem install bundler
+
+    - name: Install Dependencies
+      run: |
+        bundle config set --local path 'vendor/bundle'
+        bundle install
+
+    - name: Build Jekyll site
+      run: bundle exec jekyll build
+
     - name: Install AWS CLI
       run: sudo apt-get install -y awscli
 
     - name: Sync files to S3
       run: |
-        aws s3 sync ./ s3://nrg-engr.blog --region us-east-1 --delete 
+        aws s3 sync ./_site/ s3://nrg-engr.blog --region ${{ secrets.AWS_REGION }} --delete
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
