--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,11 +13,18 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v2
 
-    - name: Install Ruby and Bundler
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y ruby-full build-essential zlib1g-dev
-        gem install bundler
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '3.0'  # Specify your Ruby version here
+
+    - name: Cache Gems
+      uses: actions/cache@v2
+      with:
+        path: vendor/bundle
+        key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-gems-
 
     - name: Install Dependencies
       run: |
@@ -27,8 +34,11 @@ jobs:
     - name: Build Jekyll site
       run: bundle exec jekyll build
 
-    - name: Install AWS CLI
-      run: sudo apt-get install -y awscli
+    - name: Install AWS CLI v2
+      run: |
+        curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+        unzip awscliv2.zip
+        sudo ./aws/install
 
     - name: Sync files to S3
       run: |
