Add directory change to Jekyll build step for static site generation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,7 @@ jobs:
         bundle install
 
     - name: Build Jekyll site
+      cd NRG-ENGR-jekyll
       run: bundle exec jekyll build
 
     - name: Install AWS CLI v2
